-> Update download page, add OSX installer and 3rd party packages

--- a/homepage/input/download_de.html
+++ b/homepage/input/download_de.html
@@ -25,21 +25,28 @@ dieser Seite nach folgenden Kategorien sortiert:
 
   <ul>
   <li><ul style="list-style-type:none"><li><b>Windows 32 bit (getestet auf XP und 7)</b>
-    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.20/Enigma-w32-1.20.exe/download">
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.20/Enigma-w32-1.20.exe/download">
         Vollst&auml;ndige Installation (1.20)</a> etwa 40 MB</li>
     <li>md5 - f1e0034d4bc75d13a4076bd6f34bb24c</li>
     <li>sha256 - 91f5aadbd2515c312841f1a28055fbff3e961905daf2d6216b5a51eaac2afe99</li>
     </ul></li>
 
   <li><ul style="list-style-type:none"><li><b>Windows 32 bit (getestet auf XP und 7)</b>
-    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.20/Enigma-w32-1.20.zip/download">
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.20/Enigma-w32-1.20.zip/download">
         .zip Datei (1.20)</a> etwa 43 MB</li>
     <li>md5 - b232877c81a9bc4df57501a1f392404f</li>
     <li>sha256 - aec71667f1ab355a3fec230b188f0af7b05dbff1f51abb22a93f2c6255085e7a</li>
     </ul></li>
 
+  <li><ul style="list-style-type:none"><li><b>Mac OS X universal (experimentell!)</b>
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.20/Enigma-1.20.dmg/download">
+        Vollst&auml;ndige Installation (1.20)</a> etwa 32 MB</li>
+    <li>md5 - 36722bc08a6306532f07fe6fb09030ae</li>
+    <li>sha256 - 28fc02ed38fe4575aadf83d5057a00a51c19f8852c42df7a81ada4dad4328862</li>
+    </ul></li>
+
   <li><ul style="list-style-type:none"><li><b>Quellcode 32/64-Bit kompatibel, Revision 2334</b>
-    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.20/enigma-1.20.tar.gz/download">
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.20/enigma-1.20.tar.gz/download">
         tar.gz (1.20)</a> etwa 36 MB</li>
     <li>md5 - 5871158e07e675d1472f3cfc2a6557ff</li>
     <li>sha256 - f2ae2377a37a1fba85ef884f3762b50e191107e1d4520d4e2e0c21901d19758b</li>
@@ -49,27 +56,27 @@ dieser Seite nach folgenden Kategorien sortiert:
 
   <p>Alle Pakete stehen bei sourceforge zur Verf&uuml;gung. Falls Sie Probleme mit
   dem Download haben, versuchen Sie bitte einen direkten Download von
-  <a href="http://sourceforge.net/projects/enigma-game/files/">
+  <a href="https://sourceforge.net/projects/enigma-game/files/">
   sourceforge</a> und probieren Sie alle verf&uuml;gbaren Server aus.<p>
 
   <p>Wenn Sie Probleme mit einem der obigen Pakete haben, schreiben Sie
     bitte eine Beschreibung Ihres Problems an die <a
     href="mailto:enigma-devel@nongnu.org">Enigma-Mailingliste</a>.</p>
 
-  <!-- TODO: Packages are not up to date yet -->
-  <!-- <p>Pakete f&uuml;r andere Betriebssysteme wurden von Dritten zur -->
-  <!-- Verf&uuml;gung gestellt:</p> -->
+  <p>Pakete f&uuml;r andere Betriebssysteme wurden von Dritten zur
+  Verf&uuml;gung gestellt:</p>
 
-  <!-- <ul> -->
-  <!-- <li><a href="http://packages.debian.org/sid/enigma"> -->
-  <!--  Debian</a></li> -->
-  <!-- <li><a href="http://www.freshports.org/games/enigma/"> -->
-  <!--  FreeBSD</a></li> -->
-  <!-- <li><a href="http://packages.gentoo.org/package/games-puzzle/enigma"> -->
-  <!--       Gentoo Linux</a></li> -->
-  <!-- <li><a href="http://packages.ubuntu.com/quantal/games/enigma"> -->
-  <!--  Ubuntu</a></li> -->
-  <!-- </ul> -->
+  <ul>
+    <li><a href="http://packages.debian.org/jessie/enigma">Debian (jessie)</a></li>
+    <li><a href="http://packages.debian.org/sid/enigma">Debian (sid)</a></li>
+    <li><a href="http://packages.ubuntu.com/saucy/enigma">Ubuntu (saucy)</a></li>
+    <li><a href="http://packages.ubuntu.com/trusty/enigma">Ubuntu (trusty)</a></li>
+    <li><a href="https://packages.gentoo.org/package/games-puzzle/enigma">Gentoo Linux</a></li>
+    <li><a href="https://admin.fedoraproject.org/pkgdb/acls/name/enigma">Fedora</a></li>
+    <li><a href="https://software.opensuse.org/package/enigma">openSUSE</a></li>
+    <li><a href="https://aur.archlinux.org/packages/enigma_sdl/">Arch Linux</a></li>
+    <li><a href="https://www.freshports.org/games/enigma/">FreeBSD</a></li>
+  </ul>
 
 <h3><a class="arrowup" href="$$download$$"><img src="$$imagedir$$/nav_up.gif" alt="Nach oben" border="0" title="back to top"></a>
   <a name="stable">Alte stabile Version (Version 1.01)</a></h3>
@@ -88,49 +95,49 @@ dieser Seite nach folgenden Kategorien sortiert:
 
   <ul>
   <li><ul style="list-style-type:none"><li><b>Windows '95 und sp&auml;ter, einschlie&szlig;lich Windows 7</b>
-    <a href="http://downloads.sourceforge.net/project/enigma-game/Release%201.01/Enigma-1.01-w7.exe">
+    <a href="https://downloads.sourceforge.net/project/enigma-game/Release%201.01/Enigma-1.01-w7.exe">
         Vollst&auml;ndige Installation (1.01)</a> etwa 15 MB</li>
     <li>md5 - d2a8a16453880660647afd4111d0c81f</li>
     <li>sha256 - 2d34428d57e52bff9338d358fa37d74326c6c51849fa2e8a1aedbe0d2cb12245</li>
     </ul></li>
 
   <li><ul style="list-style-type:none"><li><b>Windows '95 und sp&auml;ter, einschlie&szlig;lich Windows 7</b>
-    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.01/Enigma-1.01-min-w7.exe">
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/Enigma-1.01-min-w7.exe">
         Minimale Installation (1.01)</a> etwa 11 MB</li>
     <li>md5 - 1c434e0cc327478228c828e9fe457773</li>
     <li>sha256 - 10391c3a09530221671c16dbae2653132d82566f84fab50de420e4f437477d09</li>
     </ul></li>
 
   <li><ul style="list-style-type:none"><li><b>Windows '95 und sp&auml;ter, einschlie&szlig;lich Windows 7</b>
-    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.01/Enigma-w32-1.01-w7.zip">
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/Enigma-w32-1.01-w7.zip">
         Minimale Installation als Zip (1.01)</a> etwa 11 MB</li>
     <li>md5 - 269afb849ec00966a9a4fe8488689143</li>
     <li>sha256 - a738a8b1508675bfaf12db07b7bdb42356f013f4c2d5c2a494516d78d25070a1</li>
     </ul></li>
 
   <li><ul style="list-style-type:none"><li><b>Mac OS X universell</b>
-    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.01/Enigma-1.01-OSX.dmg">
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/Enigma-1.01-OSX.dmg">
         Vollst&auml;ndige Installation (1.01)</a> etwa 18 MB</li>
     <li>md5 - 693576941ab19020d82b44095e0f4699</li>
     <li>sha256 - e2822599dfc8e0a888d729f5ad2ce7cdbf2e1e87bca508c8da76c48fbb0023ab</li>
     </ul></li>
 
   <li><ul style="list-style-type:none"><li><b>Slackware 10++</b>
-    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.01/enigma-1.01-i686-slw1.tgz">
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/enigma-1.01-i686-slw1.tgz">
         Paket tgz (1.01)</a> etwa 10 MB</li>
     <li>md5 - fb1591cb075d380304b4f91c27d95c89</li>
     <li>sha256 - 65d31f3e4a78db7850dd1016ad1eee66794fdec985c3470619e1468bbba25f45</li>
     </ul></li>
 
   <li><ul style="list-style-type:none"><li><b>Quellcode 32/64-Bit kompatibel, Revision 1914</b>
-    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.01/enigma-1.01-r1914.tar.gz">
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/enigma-1.01-r1914.tar.gz">
         tar.gz (1.01)</a> etwa 10 MB</li>
     <li>md5 - f60ccc10326b49b558e4e280075b0e70</li>
     <li>sha256 - 991ca677def3ecda3d52b3cc6ea2b0e8393c47f61168a30ffa9efc9069ffedad</li>
     </ul></li>
 
   <li><ul style="list-style-type:none"><li><b>Levelvorschau-Bilder</b>
-    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.01/enigma-1.01-previews.zip">
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/enigma-1.01-previews.zip">
         Zip (1.01)</a> etwa 4 MB</li>
     <li>md5 - 770f81e8d8ef92d8374c8932c3e1a26e</li>
     <li>sha256 - a8ab7a03ce6547e86c44aa9962e171417cb63f8bc2b3527af9da42637e6115b6</li>
@@ -140,31 +147,12 @@ dieser Seite nach folgenden Kategorien sortiert:
 
   <p>Alle Pakete stehen bei sourceforge zur Verf&uuml;gung. Falls Sie Probleme mit
   dem Download haben, versuchen Sie bitte einen direkten Download von
-  <a href="http://sourceforge.net/projects/enigma-game/files/">
+  <a href="https://sourceforge.net/projects/enigma-game/files/">
   sourceforge</a> und probieren Sie alle verf&uuml;gbaren Server aus.<p>
 
   <p>Wenn Sie Probleme mit einem der obigen Pakete haben, schreiben Sie
     bitte eine Beschreibung Ihres Problems an die <a
     href="mailto:enigma-devel@nongnu.org">Enigma-Mailingliste</a>.</p>
-
-
-  <p>Pakete f&uuml;r andere Betriebssysteme wurden von Dritten zur
-  Verf&uuml;gung gestellt:</p>
-
-  <ul>
-  <li><a href="http://packages.debian.org/lenny/enigma">
-        Debian</a></li>
-  <li><a href="http://www.freshports.org/games/enigma/">
-        FreeBSD</a></li>
-  <li><a href="http://packages.gentoo.org/package/games-puzzle/enigma">
-        Gentoo Linux</a></li>
-  <li><a href="http://en.opensuse.org/Games">
-        openSUSE</a> 10.3, 11.0, 11.1</li>
-  <li><a href="http://packages.ubuntu.com/maverick/enigma">
-        Ubuntu</a></li>
-  <li><a href="http://archive.gp2x.de/cgi-bin/cfiles.cgi?0,0,0,0,25,1729">
-        GP2X</a>&nbsp;&nbsp;(version 0.92)</li>
-  </ul>
 
 <h3><a class="arrowup" href="$$download$$"><img src="$$imagedir$$/nav_up.gif" alt="Nach oben" border="0" title="back to top"></a>
   <a name="compilation">Quellcode kompilieren unter Unix</a></h3>
@@ -195,17 +183,17 @@ dieser Seite nach folgenden Kategorien sortiert:
   sind, k&ouml;nnen Sie sie auch auf den folgenden Seiten herunterladen:</p>
 
   <ul>
-    <li><a href="http://www.libsdl.org">SDL</a>&nbsp;&nbsp;(&ge; 1.2)
-    <li><a href="http://www.libsdl.org/projects/SDL_ttf">SDL_ttf</a>&nbsp;&nbsp;(&ge; 2.0.6)
-    <li><a href="http://www.libsdl.org/projects/SDL_mixer">SDL_mixer</a>&nbsp;&nbsp;
+    <li><a href="https://www.libsdl.org">SDL</a>&nbsp;&nbsp;(&ge; 1.2)
+    <li><a href="https://www.libsdl.org/projects/SDL_ttf">SDL_ttf</a>&nbsp;&nbsp;(&ge; 2.0.6)
+    <li><a href="https://www.libsdl.org/projects/SDL_mixer">SDL_mixer</a>&nbsp;&nbsp;
       (&ge; 1.2.4)
-    <li><a href="http://www.libsdl.org/projects/SDL_image">SDL_image</a>&nbsp;&nbsp;
+    <li><a href="https://www.libsdl.org/projects/SDL_image">SDL_image</a>&nbsp;&nbsp;
       (&ge; 1.2.0)
-    <li><a href="http://xml.apache.org/xerces-c">Xerces</a>&nbsp;&nbsp;(&ge; 2.4)
+    <li><a href="https://xml.apache.org/xerces-c">Xerces</a>&nbsp;&nbsp;(&ge; 2.4)
   </ul>
 
   <p>Falls Sie die aktuelle SVN-Entwicklerversion kompilieren m&ouml;chten,
-  ben&ouml;tigen Sie zus&auml;tzlich <a href="http://curl.haxx.se/"
+  ben&ouml;tigen Sie zus&auml;tzlich <a href="https://curl.haxx.se/"
   >curl und libcurl4</a>.</p>
 
   <p>Falls Sie Debian verwenden, sollten Sie die folgenden Pakete
@@ -213,7 +201,6 @@ dieser Seite nach folgenden Kategorien sortiert:
 
   <ul>
     <li>curl</li>
-<!--    <li>libcurl3-dev</li>  -->
     <li>libcurl3-openssl-dev oder libcurl4-openssl-dev</li>
     <li>libsdl1.2-dev</li>
     <li>libsdl-image1.2-dev</li>
@@ -229,7 +216,7 @@ dieser Seite nach folgenden Kategorien sortiert:
 <p>Damit Sie stets auf dem neuesten Stand sein k&ouml;nnen, wenn eine neue
 Version von Enigma erscheint, bieten wir einen Benachrichtigungsservice via
 Email an. Tragen Sie sich daf&uuml;r auf unserer
-<a href="http://lists.nongnu.org/mailman/listinfo/enigma-announce"
+<a href="https://lists.nongnu.org/mailman/listinfo/enigma-announce"
 >Ank&uuml;ndigungs-Mailingliste</a> ein. Das Mailvolumen ist beschr&auml;nkt
 auf eine Mail pro Beta oder stabiler Version, was bislang nicht mehr als ein
 halbes Dutzend Mails im Jahr ausmachte.</p>
@@ -250,10 +237,10 @@ halbes Dutzend Mails im Jahr ausmachte.</p>
   befinden sich die &auml;lteren Enigma-Versionen auf verschiedenen
   Servern. Besuchen Sie daf&uuml;r</p>
   <ul>
-  <li><a href="http://sourceforge.net/projects/enigma-game/files/">
+  <li><a href="https://sourceforge.net/projects/enigma-game/files/">
     sourceforge</a>&nbsp;&nbsp;f&uuml;r aktuellere Versionen,</li>
-  <li><a href="http://savannah.nongnu.org/download/enigma/">
-    http://savannah.nongnu.org/download/enigma/</a>&nbsp;&nbsp;f&uuml;r vorherige Versionen,</li>
-  <li><a href="http://www.mag-heut.net/blackball/index.php?act=ST&amp;f=2&amp;t=118">
+  <li><a href="https://savannah.nongnu.org/download/enigma/">
+    https://savannah.nongnu.org/download/enigma/</a>&nbsp;&nbsp;f&uuml;r vorherige Versionen,</li>
+  <li><a href="https://www.mag-heut.net/blackball/index.php?act=ST&amp;f=2&amp;t=118">
     mag-heut.net</a>&nbsp;&nbsp;f&uuml;r alte Windows-Versionen.</li>
   </ul>
