--- a/homepage/input/download_ru.html
+++ b/homepage/input/download_ru.html
@@ -20,21 +20,28 @@
 
   <ul>
   <li><ul style="list-style-type:none"><li><b>Windows 32 bit (tested on XP and 7)</b>
-    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.20/Enigma-w32-1.20.exe/download">
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.20/Enigma-w32-1.20.exe/download">
 	Полный мастер установки (1.20)</a> прибл. 40 MB</li>
     <li>md5 - f1e0034d4bc75d13a4076bd6f34bb24c</li>
     <li>sha256 - 91f5aadbd2515c312841f1a28055fbff3e961905daf2d6216b5a51eaac2afe99</li>
     </ul></li>
 
   <li><ul style="list-style-type:none"><li><b>Windows 32 bit (tested on XP and 7)</b>
-    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.20/Enigma-w32-1.20.zip/download">
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.20/Enigma-w32-1.20.zip/download">
         Zip-архив (1.20)</a> прибл. 43 MB</li>
     <li>md5 - b232877c81a9bc4df57501a1f392404f</li>
     <li>sha256 - aec71667f1ab355a3fec230b188f0af7b05dbff1f51abb22a93f2c6255085e7a</li>
     </ul></li>
 
+  <li><ul style="list-style-type:none"><li><b>Универсальный мастер установки для Mac OS X (experimental!)</b>
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.20/Enigma-1.20.dmg/download">
+        Полный мастер установки (1.20)</a> прибл. 32 MB</li>
+    <li>md5 - 36722bc08a6306532f07fe6fb09030ae</li>
+    <li>sha256 - 28fc02ed38fe4575aadf83d5057a00a51c19f8852c42df7a81ada4dad4328862</li>
+    </ul></li>
+
   <li><ul style="list-style-type:none"><li><b>Исходные коды, совместимые с 32/64-bit, ревизия 2334</b>
-    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.20/enigma-1.20.tar.gz/download">
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.20/enigma-1.20.tar.gz/download">
     tar.gz (1.20)</a> прибл. 36 MB</li>
     <li>md5 - 5871158e07e675d1472f3cfc2a6557ff</li>
     <li>sha256 - f2ae2377a37a1fba85ef884f3762b50e191107e1d4520d4e2e0c21901d19758b</li>
@@ -43,25 +50,25 @@
   </ul>
 
   <p>Все пакеты доступны на sourceforge. В случае возникновения проблем с загрузкой попытайтесь скачать напрямую с
-  <a href="http://sourceforge.net/projects/enigma-game/files/">
+  <a href="https://sourceforge.net/projects/enigma-game/files/">
   sourceforge</a> и попробуйте каждый из предложенных серверов.<p>
 
   <p>Пожалуйста, сообщите о проблемах с любым из этих пакетов в <a
     href="mailto:enigma-devel@nongnu.org">список рассылки Enigma</a>.</p>
 
-  <!-- TODO: Packages are not up to date yet -->
-  <!-- <p>Пакеты для некоторых других операционных систем предоставляются третьими лицами:</p> -->
+  <p>Пакеты для некоторых других операционных систем предоставляются третьими лицами:</p>
 
-  <!-- <ul> -->
-  <!-- <li><a href="http://packages.debian.org/sid/enigma"> -->
-  <!--  Debian</a></li> -->
-  <!-- <li><a href="http://www.freshports.org/games/enigma/"> -->
-  <!--  FreeBSD</a></li> -->
-  <!-- <li><a href="http://packages.gentoo.org/package/games-puzzle/enigma"> -->
-  <!--       Gentoo Linux</a></li> -->
-  <!-- <li><a href="http://packages.ubuntu.com/quantal/games/enigma"> -->
-  <!--  Ubuntu</a></li> -->
-  <!-- </ul> -->
+  <ul>
+    <li><a href="http://packages.debian.org/jessie/enigma">Debian (jessie)</a></li>
+    <li><a href="http://packages.debian.org/sid/enigma">Debian (sid)</a></li>
+    <li><a href="http://packages.ubuntu.com/saucy/enigma">Ubuntu (saucy)</a></li>
+    <li><a href="http://packages.ubuntu.com/trusty/enigma">Ubuntu (trusty)</a></li>
+    <li><a href="https://packages.gentoo.org/package/games-puzzle/enigma">Gentoo Linux</a></li>
+    <li><a href="https://admin.fedoraproject.org/pkgdb/acls/name/enigma">Fedora</a></li>
+    <li><a href="https://software.opensuse.org/package/enigma">openSUSE</a></li>
+    <li><a href="https://aur.archlinux.org/packages/enigma_sdl/">Arch Linux</a></li>
+    <li><a href="https://www.freshports.org/games/enigma/">FreeBSD</a></li>
+  </ul>
 
 <h3><a class="arrowup" href="$$download$$"><img src="$$imagedir$$/nav_up.gif" alt="Up" border="0" title="К началу страницы"></a>
   <a name="stable">Стабильный выпуск (Версия 1.01)</a></h3>
@@ -76,49 +83,49 @@
 
   <ul>
   <li><ul style="list-style-type:none"><li><b>Windows '95 и выше, включая Windows 7</b>
-    <a href="http://downloads.sourceforge.net/project/enigma-game/Release%201.01/Enigma-1.01-w7.exe">
+    <a href="https://downloads.sourceforge.net/project/enigma-game/Release%201.01/Enigma-1.01-w7.exe">
         Полный мастер установки (1.01)</a> прибл. 15 MB</li>
     <li>md5 - d2a8a16453880660647afd4111d0c81f</li>
     <li>sha256 - 2d34428d57e52bff9338d358fa37d74326c6c51849fa2e8a1aedbe0d2cb12245</li>
     </ul></li>
 
   <li><ul style="list-style-type:none"><li><b>Windows '95 и выше, включая Windows 7</b>
-    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.01/Enigma-1.01-min-w7.exe">
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/Enigma-1.01-min-w7.exe">
         Минимальный мастер установки (1.01)</a> прибл. 11 MB</li>
     <li>md5 - 1c434e0cc327478228c828e9fe457773</li>
     <li>sha256 - 10391c3a09530221671c16dbae2653132d82566f84fab50de420e4f437477d09</li>
     </ul></li>
 
   <li><ul style="list-style-type:none"><li><b>Windows '95 и выше, включая Windows 7</b>
-    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.01/Enigma-w32-1.01-w7.zip">
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/Enigma-w32-1.01-w7.zip">
         Минимальный Zip-архив (1.01)</a> прибл. 11 MB</li>
     <li>md5 - 269afb849ec00966a9a4fe8488689143</li>
     <li>sha256 - a738a8b1508675bfaf12db07b7bdb42356f013f4c2d5c2a494516d78d25070a1</li>
     </ul></li>
 
   <li><ul style="list-style-type:none"><li><b>Универсальный мастер установки для Mac OS X</b>
-    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.01/Enigma-1.01-OSX.dmg">
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/Enigma-1.01-OSX.dmg">
         Полный мастер установки (1.01)</a> прибл. 18 MB</li>
     <li>md5 - 693576941ab19020d82b44095e0f4699</li>
     <li>sha256 - e2822599dfc8e0a888d729f5ad2ce7cdbf2e1e87bca508c8da76c48fbb0023ab</li>
     </ul></li>
 
   <li><ul style="list-style-type:none"><li><b>Slackware 10++</b>
-    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.01/enigma-1.01-i686-slw1.tgz">
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/enigma-1.01-i686-slw1.tgz">
         Пакет tgz (1.01)</a> прибл. 10 MB</li>
     <li>md5 - fb1591cb075d380304b4f91c27d95c89</li>
     <li>sha256 - 65d31f3e4a78db7850dd1016ad1eee66794fdec985c3470619e1468bbba25f45</li>
     </ul></li>
 
   <li><ul style="list-style-type:none"><li><b>Исходные коды, совместимые с 32/64-bit, ревизия 1914</b>
-    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.01/enigma-1.01-r1914.tar.gz">
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/enigma-1.01-r1914.tar.gz">
         tar.gz (1.01)</a> прибл. 10 MB</li>
     <li>md5 - f60ccc10326b49b558e4e280075b0e70</li>
     <li>sha256 - 991ca677def3ecda3d52b3cc6ea2b0e8393c47f61168a30ffa9efc9069ffedad</li>
     </ul></li>
 
   <li><ul style="list-style-type:none"><li><b>Эскизы</b>
-    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.01/enigma-1.01-previews.zip">
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/enigma-1.01-previews.zip">
         Zip-архив (1.01)</a> прибл. 4 MB</li>
     <li>md5 - 770f81e8d8ef92d8374c8932c3e1a26e</li>
     <li>sha256 - a8ab7a03ce6547e86c44aa9962e171417cb63f8bc2b3527af9da42637e6115b6</li>
@@ -127,29 +134,11 @@
   </ul>
 
   <p>Все пакеты доступны на sourceforge. В случае возникновения проблем с загрузкой попытайтесь скачать напрямую с
-  <a href="http://sourceforge.net/projects/enigma-game/files/">
+  <a href="https://sourceforge.net/projects/enigma-game/files/">
   sourceforge</a> и попробуйте каждый из предложенных серверов.<p>
 
   <p>Пожалуйста, сообщите о проблемах с любым из этих пакетов в <a
     href="mailto:enigma-devel@nongnu.org">список рассылки Enigma</a>.</p>
-
-
-  <p>Пакеты для некоторых других операционных систем предоставляются третьими лицами:</p>
-
-  <ul>
-  <li><a href="http://packages.debian.org/lenny/enigma">
-        Debian</a></li>
-  <li><a href="http://www.freshports.org/games/enigma/">
-        FreeBSD</a></li>
-  <li><a href="http://packages.gentoo.org/package/games-puzzle/enigma">
-        Gentoo Linux</a></li>
-  <li><a href="http://en.opensuse.org/Games">
-        openSUSE</a> 10.3, 11.0, 11.1</li>
-  <li><a href="http://packages.ubuntu.com/maverick/enigma">
-        Ubuntu</a></li>
-  <li><a href="http://archive.gp2x.de/cgi-bin/cfiles.cgi?0,0,0,0,25,1729">
-        GP2X</a>&nbsp;&nbsp;(версия 0.92)</li>
-  </ul>
 
 <h3><a class="arrowup" href="$$download$$"><img src="$$imagedir$$/nav_up.gif" alt="Up" border="0" title="К началу страницы"></a>
   <a name="compilation">Сборка из исходных кодов под Unix</a></h3>
@@ -178,22 +167,21 @@
   скачать их со следующих веб-сайтов:</p>
 
   <ul>
-    <li><a href="http://www.libsdl.org">SDL</a>&nbsp;&nbsp;(&ge; 1.2)</li>
-    <li><a href="http://www.libsdl.org/projects/SDL_ttf">SDL_ttf</a>&nbsp;&nbsp;(&ge; 2.0.6)</li>
-    <li><a href="http://www.libsdl.org/projects/SDL_mixer">SDL_mixer</a>&nbsp;&nbsp;(&ge; 1.2.4)</li>
-    <li><a href="http://www.libsdl.org/projects/SDL_image">SDL_image</a>&nbsp;&nbsp;(&ge; 1.2.0)</li>
-    <li><a href="http://xml.apache.org/xerces-c">Xerces</a>&nbsp;&nbsp;(&ge; 2.4)</li>
+    <li><a href="https://www.libsdl.org">SDL</a>&nbsp;&nbsp;(&ge; 1.2)</li>
+    <li><a href="https://www.libsdl.org/projects/SDL_ttf">SDL_ttf</a>&nbsp;&nbsp;(&ge; 2.0.6)</li>
+    <li><a href="https://www.libsdl.org/projects/SDL_mixer">SDL_mixer</a>&nbsp;&nbsp;(&ge; 1.2.4)</li>
+    <li><a href="https://www.libsdl.org/projects/SDL_image">SDL_image</a>&nbsp;&nbsp;(&ge; 1.2.0)</li>
+    <li><a href="https://xml.apache.org/xerces-c">Xerces</a>&nbsp;&nbsp;(&ge; 2.4)</li>
   </ul>
 
   <p>Если Вы хотите собрать текущую разрабатываемую версию из SVN, Вам
-  дополнительно понадобятся <a href="http://curl.haxx.se/">curl и libcurl4</a>.</p>
+  дополнительно понадобятся <a href="https://curl.haxx.se/">curl и libcurl4</a>.</p>
 
   <p>Если Вы используете Debian, то для сборки разрабатываемой версии из SVN у Вас
   должны быть установлены следующие пакеты:</p>
 
   <ul>
     <li>curl</li>
-<!--    <li>libcurl3-dev</li>  -->
     <li>libcurl3-openssl-dev / libcurl4-openssl-dev</li>
     <li>libsdl1.2-dev</li>
     <li>libsdl-image1.2-dev</li>
@@ -208,7 +196,7 @@
 
 <p>Если Вы задались целью получить самую последнюю версию Enigma, мы предлагаем услугу уведомления
 о новых выпусках по электронной почте. Просто зарегистрируйтесь в
-<a href="http://lists.nongnu.org/mailman/listinfo/enigma-announce">списке
+<a href="https://lists.nongnu.org/mailman/listinfo/enigma-announce">списке
 рассылки с уведомлением о выпуске</a>. Объем почтового трафика будет ограничен одним сообщением о бета или стабильном выпуске
 Enigma, который ещё не превосходил полудюжины сообщений в течение года.</p>
 
@@ -226,10 +214,10 @@ Enigma, который ещё не превосходил полудюжины сообщений в течение года.</p>
   <p>Из-за изменений в репозитории исходных кодов и серверах загрузки, старые версии
   Enigma можно найти на различных серверах. Посмотрите на</p>
   <ul>
-  <li><a href="http://sourceforge.net/projects/enigma-game/files/">
+  <li><a href="https://sourceforge.net/projects/enigma-game/files/">
     sourceforge</a>&nbsp;&nbsp;если ищете недавние выпуски.</li>
-  <li><a href="http://savannah.nongnu.org/download/enigma/">
-    http://savannah.nongnu.org/download/enigma/</a>&nbsp;&nbsp;если ищете предыдущие выпуски</li>
-  <li><a href="http://www.mag-heut.net/blackball/index.php?act=ST&amp;f=2&amp;t=118">
+  <li><a href="https://savannah.nongnu.org/download/enigma/">
+    https://savannah.nongnu.org/download/enigma/</a>&nbsp;&nbsp;если ищете предыдущие выпуски</li>
+  <li><a href="https://www.mag-heut.net/blackball/index.php?act=ST&amp;f=2&amp;t=118">
     mag-heut.net</a>&nbsp;&nbsp;если ищете старые версии для Windows.</li>
   </ul>
