Score evaluation May 2015

--- a/homepage/input/table-wr.html
+++ b/homepage/input/table-wr.html
@@ -1,48 +1,20 @@
   <table>
-    <caption>$$Worldrecord_Statistics$$ $$December$$ 2010</caption>
-    <colgroup><col width="80"><col width="80"><col width="470"></colgroup>
-    <tr><th>$$total$$</th><th>$$shared$$</th><th class="left">$$user$$</th></tr>
-    <tr><td class="num">860</td><td class="num">342</td><td class="left">'Medimaster'</td></tr>
-    <tr><td class="num">522</td><td class="num">263</td><td class="left">'Moneymaker'</td></tr>
-    <tr><td class="num">160</td><td class="num">153</td><td class="left">'l'ane'</td></tr>
-    <tr><td class="num"> 71</td><td class="num"> 59</td><td class="left">'daydreamer'</td></tr>
-    <tr><td class="num"> 71</td><td class="num"> 60</td><td class="left">'Angolino'</td></tr>
-    <tr><td class="num"> 66</td><td class="num"> 66</td><td class="left">'Crystalicum'</td></tr>
-    <tr><td class="num"> 64</td><td class="num"> 38</td><td class="left">'Stupid'</td></tr>
-    <tr><td class="num"> 54</td><td class="num"> 50</td><td class="left">'dev0'</td></tr>
-    <tr><td class="num"> 50</td><td class="num"> 45</td><td class="left">'Mentist'</td></tr>
-    <tr><td class="num"> 38</td><td class="num"> 35</td><td class="left">'Daisy'</td></tr>
-    <tr><td class="num"> 38</td><td class="num"> 36</td><td class="left">'Johannes'</td></tr>
-    <tr><td class="num"> 27</td><td class="num"> 27</td><td class="left">'H-J.Epting'</td></tr>
-    <tr><td class="num"> 25</td><td class="num"> 25</td><td class="left">'Another'</td></tr>
-    <tr><td class="num"> 24</td><td class="num"> 22</td><td class="left">'Emmanuel' + 'Skywolf'</td></tr>
-    <tr><td class="num"> 24</td><td class="num"> 24</td><td class="left">'Alexandros'</td></tr>
-    <tr><td class="num"> 22</td><td class="num"> 22</td><td class="left">'Ghatotkacha'</td></tr>
-    <tr><td class="num"> 19</td><td class="num"> 17</td><td class="left">'Zekobah'</td></tr>
-    <tr><td class="num"> 18</td><td class="num"> 13</td><td class="left">'Malla'</td></tr>
-    <tr><td class="num"> 16</td><td class="num"> 16</td><td class="left">'ryujun'</td></tr>
-    <tr><td class="num"> 15</td><td class="num"> 14</td><td class="left">'Django'</td></tr>
-    <tr><td class="num"> 15</td><td class="num"> 15</td><td class="left">'joseba' + 'Great Scott'</td></tr>
-    <tr><td class="num"> 14</td><td class="num"> 14</td><td class="left">'Zephyr'</td></tr>
-    <tr><td class="num"> 13</td><td class="num"> 13</td><td class="left">'Iceshark7'</td></tr>
-    <tr><td class="num"> 12</td><td class="num"> 12</td><td class="left">'ged' + 'Safalra'</td></tr>
-    <tr><td class="num"> 11</td><td class="num">  9</td><td class="left">'B-Huff'</td></tr>
-    <tr><td class="num"> 11</td><td class="num"> 11</td><td class="left">'Ludmian'</td></tr>
-    <tr><td class="num"> 10</td><td class="num"> 10</td><td class="left">'Duffy'</td></tr>
-    <tr><td class="num">  9</td><td class="num">  7</td><td class="left">'Ronald'</td></tr>
-    <tr><td class="num">  8</td><td class="num">  8</td><td class="left">'alfix' + 'HuB34'</td></tr>
-    <tr><td class="num">  7</td><td class="num">  1</td><td class="left">'DINA'</td></tr>
-    <tr><td class="num">  7</td><td class="num">  7</td><td class="left">'casmith_789'</td></tr>
-    <tr><td class="num">  6</td><td class="num">  5</td><td class="left">'ShadowPhrogg32642342'</td></tr>
-    <tr><td class="num">  6</td><td class="num">  6</td><td class="left">'Chocolate Zero' + 'Dime'</td></tr>
-    <tr><td class="num">  5</td><td class="num">  5</td><td class="left">'Gloop' + 'fabian' + 'dpl' + 'Edgar_Flesk'</td></tr>
-    <tr><td class="num">  4</td><td class="num">  2</td><td class="left">'Breezy'</td></tr>
-    <tr><td class="num">  4</td><td class="num">  4</td><td class="left">'J3FF' + 'mecke' + 'Guglielmo' + 'Freshman' + 'Thomas'</td></tr>
-    <tr><td class="num">  3</td><td class="num">  2</td><td class="left">'Hairball'</td></tr>
-    <tr><td class="num">  3</td><td class="num">  3</td><td class="left">'ABS' + 'Chris' + 'Taztunes' + 'bojster' + 'U-Punkt' + 'Raoul' + 'Tobias' + 'Ralf' + 'Lukas'</td></tr>
-    <tr><td class="num">  2</td><td class="num">  1</td><td class="left">'Stephanie'</td></tr>
-    <tr><td class="num">  2</td><td class="num">  2</td><td class="left">'ReasonAnce' + 'Cyphase' + 'hendrik' + 'GiannuzzITA' + 'Sopoforic' + 'alfred69' + 'GPCollin' + 'Sigma' + 'Tiza' + 'Sim_Ed' + 'Nicolás' + 'Andy' + 'Austin' + 'Snaily' + 'Wuzzy' + 'serpent'</td></tr>
-    <tr><td class="num">  1</td><td class="num">  0</td><td class="left">'Feynman' + 'alain' + 'colonel crayon' + 'Gorn' + 'Nat'</td></tr>
-    <tr><td class="num">  1</td><td class="num">  1</td><td class="left">'Agares' + 'mrduke' + 'Slav' + 'Andreas' + 'Drotten' + 'Samuel' + 'Iceball' + 'hdwow' + 'Asbel' + 'B-man' + 'cuoha' + 'Vaily' + 'Antonio EE' + 'Tiger' + 'geembo_90' + 'Zak' + 'niebie' + 'AlephD' + 'tjRaven' + 'Mark P.' + 'Neophilus' + 'oblo' + 'para_doks' + 'Bent' + 'Craven' + 'Jinajon' + 'Ingo' + 'JuSt' + 'Timo'</td></tr>
-    <tr><td class="num">  0</td><td class="num">  0</td><td class="left">'tasker' + 'Miel56' + 'Alf' + 'Klaus' + 'Turbogurk' + 'Gottseinsohn' + 'Eselchen' + 'wildgoose' + 'Ale' + 'IntKecsk' + 'brynn' + 'purplerainbow' + 'Alexander J' + 'Adonica' + 'Joona' + 'Kosby' + 'schmusi20' + 'WP319' + 'Shaez' + 'erich' + 'Uli' + 'Alex' + 'Pascal' + 'jdcampo' + 'Kroetchen' + 'Harry Lim' + 'Sequoyah' + 'AkRa' + 'tony' + 'NorthForty' + 'Nanor22' + 'Jeffrey S' + 'Marc-Hendrik' + 'Kadu' + 'B.3' + 'jojo' + 'WesleyCrusher' + 'fjp' + 'oxyd4ever' + 'Archcorenth' + 'mhatta' + 'Paulus' + 'Dvorhagen' + 'redsantz' + 'ThingFish' + 'Liam Sheehan' + 'Agnieszka' + 'AQZ' + 'aranelv' + 'jumbo' + 'Zhura' + 'ntaeijr' + 'ael' + 'biotopa' + 'Daniel' + 'Sandra' + 'Magnus and Susi' + 'Kevin' + 'jdrexler' + 'xmouse' + 'Vinksu' + 'Valkyrie2' + 'Fred_the_wise' + 'Jan' + 'Little_Mole' + 'crypto_rsa' + 'Vlad' + 'Momcat' + 'Tomson' + 'Mecki' + 'The red O' + 'gringer' + 'IIkka' + 'Nfol' + 'shoki' + 'TerryOneill' + 'Zdzislav' + 'Enrymather' + 'evane' + 'rima' + 'MicWa' + 'AsuCaga' + 'Jonyzz' + 'Rugby4ever' + 'Meeve' + 'Hans-HD' + 'un_guru' + 'krazy62' + 'Sparkey' + 'Holger' + 'ais523' + 'Ingo_K' + 'Ant' + 'Melanie' + 'IChrisI' + 'Markus' + 'Michael' + 'Tarim'</td></tr>
+    <caption>$$Worldrecord_Statistics$$ $$May$$ 2014</caption>
+    <colgroup><col width="150"><col width="80"><col width="80"><col width="80"><col width="120"><col width="80"><col width="120"></colgroup>
+    <tr><th class="left">$$user$$</th><th>$$total$$</th><th>$$shared$$</th><th>$$difficult$$</th><td>$$alone_shared$$</td><th>$$easy$$</th><td>$$alone_shared$$</td></tr>
+    <tr><td class="left">daydreamer</td><td class="num">1305</td><td class="num">182</td><td class="num">1120</td><td class="num">970 + 150</td><td class="num">185</td><td class="num">153 + 32</td></tr>
+    <tr><td class="left">dev0</td><td class="num">797</td><td class="num">131</td><td class="num">679</td><td class="num">576 + 103</td><td class="num">118</td><td class="num">90 + 28</td></tr>
+    <tr><td class="left">Craven</td><td class="num">281</td><td class="num">43</td><td class="num">261</td><td class="num">227 + 34</td><td class="num">20</td><td class="num">11 + 9</td></tr>
+    <tr><td class="left">Daisy</td><td class="num">230</td><td class="num">82</td><td class="num">194</td><td class="num">128 + 66</td><td class="num">36</td><td class="num">20 + 16</td></tr>
+    <tr><td class="left">Zecks</td><td class="num">167</td><td class="num">58</td><td class="num">129</td><td class="num">82 + 47</td><td class="num">38</td><td class="num">27 + 11</td></tr>
+    <tr><td class="left">Taztunes</td><td class="num">109</td><td class="num">18</td><td class="num">86</td><td class="num">71 + 15</td><td class="num">23</td><td class="num">20 + 3</td></tr>
+    <tr><td class="left">Another</td><td class="num">99</td><td class="num">49</td><td class="num">88</td><td class="num">47 + 41</td><td class="num">11</td><td class="num">3 + 8</td></tr>
+    <tr><td class="left">Raoul</td><td class="num">29</td><td class="num">11</td><td class="num">26</td><td class="num">16 + 10</td><td class="num">3</td><td class="num">2 + 1</td></tr>
+    <tr><td class="left">U-Punkt</td><td class="num">21</td><td class="num">4</td><td class="num">14</td><td class="num">10 + 4</td><td class="num">7</td><td class="num">7 + 0</td></tr>
+    <tr><td class="left">hadanie7</td><td class="num">10</td><td class="num">5</td><td class="num">9</td><td class="num">5 + 4</td><td class="num">1</td><td class="num">0 + 1</td></tr>
+    <tr><td class="left">Chib</td><td class="num">3</td><td class="num">1</td><td class="num">3</td><td class="num">2 + 1</td><td class="num">0</td><td class="num">0 + 0</td></tr>
+    <tr><td class="left">gorg</td><td class="num">3</td><td class="num">1</td><td class="num">1</td><td class="num">1 + 0</td><td class="num">2</td><td class="num">1 + 1</td></tr>
+    <tr><td class="left">maggie</td><td class="num">2</td><td class="num">2</td><td class="num">2</td><td class="num">0 + 2</td><td class="num">0</td><td class="num">0 + 0</td></tr>
+    <tr><td class="left">Mnemosyne</td><td class="num">2</td><td class="num">0</td><td class="num">2</td><td class="num">2 + 0</td><td class="num">0</td><td class="num">0 + 0</td></tr>
+    <tr><td class="left">Mark P.</td><td class="num">1</td><td class="num">1</td><td class="num">1</td><td class="num">0 + 1</td><td class="num">0</td><td class="num">0 + 0</td></tr>
   </table>
