--- a/homepage/input/userlist.html
+++ b/homepage/input/userlist.html
@@ -1,212 +1,20 @@
 <div class="usernames">
 $$names_in_use$$
   <ul>
-    <li>ABS</li>
-    <li>Adonica</li>
-    <li>ael</li>
-    <li>Agares</li>
-    <li>Agnieszka</li>
-    <li>ais523</li>
-    <li>AkRa</li>
-    <li>alain</li>
-    <li>Ale</li>
-    <li>AlephD</li>
-    <li>Alex</li>
-    <li>Alexander J</li>
-    <li>Alexandros</li>
-    <li>Alf</li>
-    <li>alfix</li>
-    <li>alfred69</li>
-    <li>Andreas</li>
-    <li>Andy</li>
-    <li>Angolino</li>
     <li>Another</li>
-    <li>Ant</li>
-    <li>Antonio EE</li>
-    <li>AQZ</li>
-    <li>aranelv</li>
-    <li>Archcorenth</li>
-    <li>Asbel</li>
-    <li>AsuCaga</li>
-    <li>Austin</li>
-    <li>B.3</li>
-    <li>Bent</li>
-    <li>B-Huff</li>
-    <li>biotopa</li>
-    <li>B-man</li>
-    <li>bojster</li>
-    <li>Breezy</li>
-    <li>brynn</li>
-    <li>casmith_789</li>
-    <li>Chocolate Zero</li>
-    <li>Chris</li>
-    <li>colonel crayon</li>
+    <li>Chib</li>
     <li>Craven</li>
-    <li>crypto_rsa</li>
-    <li>Crystalicum</li>
-    <li>cuoha</li>
-    <li>Cyphase</li>
     <li>Daisy</li>
-    <li>Daniel</li>
     <li>daydreamer</li>
     <li>dev0</li>
-    <li>Dime</li>
-    <li>DINA</li>
-    <li>Django</li>
-    <li>dpl</li>
-    <li>Drotten</li>
-    <li>Duffy</li>
-    <li>Dvorhagen</li>
-    <li>Edgar_Flesk</li>
-    <li>Emmanuel</li>
-    <li>Enrymather</li>
-    <li>erich</li>
-    <li>Eselchen</li>
-    <li>evane</li>
-    <li>fabian</li>
-    <li>Feynman</li>
-    <li>fjp</li>
-    <li>Fred_the_wise</li>
-    <li>Freshman</li>
-    <li>ged</li>
-    <li>geembo_90</li>
-    <li>Ghatotkacha</li>
-    <li>GiannuzzITA</li>
-    <li>Gloop</li>
-    <li>Gorn</li>
-    <li>Gottseinsohn</li>
-    <li>GPCollin</li>
-    <li>Great Scott</li>
-    <li>gringer</li>
-    <li>Guglielmo</li>
-    <li>Hairball</li>
-    <li>Hans-HD</li>
-    <li>Harry Lim</li>
-    <li>hdwow</li>
-    <li>hendrik</li>
-    <li>H-J.Epting</li>
-    <li>Holger</li>
-    <li>HuB34</li>
-    <li>Iceball</li>
-    <li>Iceshark7</li>
-    <li>IChrisI</li>
-    <li>IIkka</li>
-    <li>Ingo</li>
-    <li>Ingo_K</li>
-    <li>IntKecsk</li>
-    <li>J3FF</li>
-    <li>Jan</li>
-    <li>jdcampo</li>
-    <li>jdrexler</li>
-    <li>Jeffrey S</li>
-    <li>Jinajon</li>
-    <li>Johannes</li>
-    <li>jojo</li>
-    <li>Jonyzz</li>
-    <li>Joona</li>
-    <li>joseba</li>
-    <li>jumbo</li>
-    <li>JuSt</li>
-    <li>Kadu</li>
-    <li>Kevin</li>
-    <li>Klaus</li>
-    <li>Kosby</li>
-    <li>krazy62</li>
-    <li>Kroetchen</li>
-    <li>l'ane</li>
-    <li>Liam Sheehan</li>
-    <li>Little_Mole</li>
-    <li>Ludmian</li>
-    <li>Lukas</li>
-    <li>Magnus and Susi</li>
-    <li>Malla</li>
-    <li>Marc-Hendrik</li>
+    <li>gorg</li>
+    <li>hadanie7</li>
+    <li>maggie</li>
     <li>Mark P.</li>
-    <li>Markus</li>
-    <li>mecke</li>
-    <li>Mecki</li>
-    <li>Medimaster</li>
-    <li>Meeve</li>
-    <li>Melanie</li>
-    <li>Mentist</li>
-    <li>mhatta</li>
-    <li>Michael</li>
-    <li>MicWa</li>
-    <li>Miel56</li>
-    <li>Momcat</li>
-    <li>Moneymaker</li>
-    <li>mrduke</li>
-    <li>Nanor22</li>
-    <li>Nat</li>
-    <li>Neophilus</li>
-    <li>Nfol</li>
-    <li>Nicolás</li>
-    <li>niebie</li>
-    <li>NorthForty</li>
-    <li>ntaeijr</li>
-    <li>oblo</li>
-    <li>oxyd4ever</li>
-    <li>para_doks</li>
-    <li>Pascal</li>
-    <li>Paulus</li>
-    <li>purplerainbow</li>
-    <li>Ralf</li>
+    <li>Mnemosyne</li>
     <li>Raoul</li>
-    <li>ReasonAnce</li>
-    <li>redsantz</li>
-    <li>rima</li>
-    <li>Ronald</li>
-    <li>Rugby4ever</li>
-    <li>ryujun</li>
-    <li>Safalra</li>
-    <li>Samuel</li>
-    <li>Sandra</li>
-    <li>schmusi20</li>
-    <li>Sequoyah</li>
-    <li>serpent</li>
-    <li>ShadowPhrogg32642342</li>
-    <li>Shaez</li>
-    <li>shoki</li>
-    <li>Sigma</li>
-    <li>Sim_Ed</li>
-    <li>Skywolf</li>
-    <li>Slav</li>
-    <li>Snaily</li>
-    <li>Sopoforic</li>
-    <li>Sparkey</li>
-    <li>Stephanie</li>
-    <li>Stupid</li>
-    <li>Tarim</li>
-    <li>tasker</li>
     <li>Taztunes</li>
-    <li>TerryOneill</li>
-    <li>The red O</li>
-    <li>ThingFish</li>
-    <li>Thomas</li>
-    <li>Tiger</li>
-    <li>Timo</li>
-    <li>Tiza</li>
-    <li>tjRaven</li>
-    <li>Tobias</li>
-    <li>Tomson</li>
-    <li>tony</li>
-    <li>Turbogurk</li>
-    <li>Uli</li>
-    <li>un_guru</li>
     <li>U-Punkt</li>
-    <li>Vaily</li>
-    <li>Valkyrie2</li>
-    <li>Vinksu</li>
-    <li>Vlad</li>
-    <li>WesleyCrusher</li>
-    <li>wildgoose</li>
-    <li>WP319</li>
-    <li>Wuzzy</li>
-    <li>xmouse</li>
-    <li>Zak</li>
-    <li>Zdzislav</li>
-    <li>Zekobah</li>
-    <li>Zephyr</li>
-    <li>Zhura</li>
+    <li>Zecks</li>
   </ul>
 </div>
