--- a/homepage/input/table-rat.html
+++ b/homepage/input/table-rat.html
@@ -1,113 +1,16 @@
   <table>
-    <caption>$$Rating_Statistics$$ $$December$$ 2010</caption>
-    <colgroup><col width="80"><col width="80"><col width="220"></colgroup>
-    <tr><th>$$count$$</th><th>$$average$$</th><th class="left">$$user$$</th></tr>    <tr><td class="num">1062</td><td class="num"> 5.06</td><td class="left">'ryujun'</td></tr>
-    <tr><td class="num">1056</td><td class="num"> 4.83</td><td class="left">'Taztunes'</td></tr>
-    <tr><td class="num">1045</td><td class="num"> 4.93</td><td class="left">'Crystalicum'</td></tr>
-    <tr><td class="num">1038</td><td class="num"> 5.04</td><td class="left">'dev0'</td></tr>
-    <tr><td class="num">900</td><td class="num"> 4.80</td><td class="left">'daydreamer'</td></tr>
-    <tr><td class="num">877</td><td class="num"> 5.89</td><td class="left">'Skywolf'</td></tr>
-    <tr><td class="num">876</td><td class="num"> 5.16</td><td class="left">'Another'</td></tr>
-    <tr><td class="num">871</td><td class="num"> 5.09</td><td class="left">'Stupid'</td></tr>
-    <tr><td class="num">722</td><td class="num"> 5.24</td><td class="left">'Mentist'</td></tr>
-    <tr><td class="num">663</td><td class="num"> 4.79</td><td class="left">'U-Punkt'</td></tr>
-    <tr><td class="num">656</td><td class="num"> 4.59</td><td class="left">'Zephyr'</td></tr>
-    <tr><td class="num">653</td><td class="num"> 5.01</td><td class="left">'Duffy'</td></tr>
-    <tr><td class="num">631</td><td class="num"> 4.99</td><td class="left">'Moneymaker'</td></tr>
-    <tr><td class="num">622</td><td class="num"> 4.22</td><td class="left">'shoki'</td></tr>
-    <tr><td class="num">573</td><td class="num"> 5.16</td><td class="left">'dpl'</td></tr>
-    <tr><td class="num">570</td><td class="num"> 4.51</td><td class="left">'Alexandros'</td></tr>
-    <tr><td class="num">561</td><td class="num"> 5.06</td><td class="left">'Tiza'</td></tr>
-    <tr><td class="num">534</td><td class="num"> 4.97</td><td class="left">'B-Huff'</td></tr>
-    <tr><td class="num">523</td><td class="num"> 5.04</td><td class="left">'Ronald'</td></tr>
-    <tr><td class="num">511</td><td class="num"> 5.30</td><td class="left">'Lukas'</td></tr>
-    <tr><td class="num">482</td><td class="num"> 4.04</td><td class="left">'Vinksu'</td></tr>
-    <tr><td class="num">448</td><td class="num"> 5.08</td><td class="left">'Johannes'</td></tr>
-    <tr><td class="num">433</td><td class="num"> 4.36</td><td class="left">'ged'</td></tr>
-    <tr><td class="num">388</td><td class="num"> 4.86</td><td class="left">'Gloop'</td></tr>
-    <tr><td class="num">307</td><td class="num"> 4.01</td><td class="left">'Sim_Ed'</td></tr>
-    <tr><td class="num">285</td><td class="num"> 4.60</td><td class="left">'ABS'</td></tr>
-    <tr><td class="num">254</td><td class="num"> 4.91</td><td class="left">'JuSt'</td></tr>
-    <tr><td class="num">208</td><td class="num"> 6.15</td><td class="left">'Momcat'</td></tr>
-    <tr><td class="num">200</td><td class="num"> 5.74</td><td class="left">'Malla'</td></tr>
-    <tr><td class="num">199</td><td class="num"> 4.79</td><td class="left">'Medimaster'</td></tr>
-    <tr><td class="num">187</td><td class="num"> 5.05</td><td class="left">'WP319'</td></tr>
-    <tr><td class="num">178</td><td class="num"> 4.41</td><td class="left">'Jonyzz'</td></tr>
-    <tr><td class="num">156</td><td class="num"> 4.90</td><td class="left">'Angolino'</td></tr>
-    <tr><td class="num">150</td><td class="num"> 5.47</td><td class="left">'Raoul'</td></tr>
-    <tr><td class="num">135</td><td class="num"> 4.13</td><td class="left">'Edgar_Flesk'</td></tr>
-    <tr><td class="num">126</td><td class="num"> 5.79</td><td class="left">'Ghatotkacha'</td></tr>
-    <tr><td class="num">124</td><td class="num"> 4.44</td><td class="left">'Sigma'</td></tr>
-    <tr><td class="num"> 97</td><td class="num"> 4.16</td><td class="left">'Safalra'</td></tr>
-    <tr><td class="num"> 91</td><td class="num"> 4.41</td><td class="left">'Zhura'</td></tr>
-    <tr><td class="num"> 85</td><td class="num"> 4.76</td><td class="left">'para_doks'</td></tr>
-    <tr><td class="num"> 75</td><td class="num"> 4.52</td><td class="left">'Kroetchen'</td></tr>
-    <tr><td class="num"> 72</td><td class="num"> 5.63</td><td class="left">'Wuzzy'</td></tr>
-    <tr><td class="num"> 65</td><td class="num"> 6.09</td><td class="left">'mecke'</td></tr>
-    <tr><td class="num"> 63</td><td class="num"> 4.84</td><td class="left">'Mark P.'</td></tr>
-    <tr><td class="num"> 52</td><td class="num"> 6.56</td><td class="left">'Hairball'</td></tr>
-    <tr><td class="num"> 51</td><td class="num"> 6.39</td><td class="left">'Little_Mole'</td></tr>
-    <tr><td class="num"> 50</td><td class="num"> 5.26</td><td class="left">'Daniel'</td></tr>
-    <tr><td class="num"> 49</td><td class="num"> 4.90</td><td class="left">'hendrik'</td></tr>
-    <tr><td class="num"> 49</td><td class="num"> 6.02</td><td class="left">'oblo'</td></tr>
-    <tr><td class="num"> 49</td><td class="num"> 6.31</td><td class="left">'Dime'</td></tr>
-    <tr><td class="num"> 47</td><td class="num"> 6.62</td><td class="left">'Ale'</td></tr>
-    <tr><td class="num"> 43</td><td class="num"> 3.74</td><td class="left">'Iceshark7'</td></tr>
-    <tr><td class="num"> 39</td><td class="num"> 6.08</td><td class="left">'mrduke'</td></tr>
-    <tr><td class="num"> 33</td><td class="num"> 3.39</td><td class="left">'Freshman'</td></tr>
-    <tr><td class="num"> 33</td><td class="num"> 5.27</td><td class="left">'gringer'</td></tr>
-    <tr><td class="num"> 32</td><td class="num"> 5.97</td><td class="left">'ReasonAnce'</td></tr>
-    <tr><td class="num"> 31</td><td class="num"> 7.61</td><td class="left">'AkRa'</td></tr>
-    <tr><td class="num"> 30</td><td class="num"> 4.40</td><td class="left">'Archcorenth'</td></tr>
-    <tr><td class="num"> 30</td><td class="num"> 6.93</td><td class="left">'un_guru'</td></tr>
-    <tr><td class="num"> 27</td><td class="num"> 5.33</td><td class="left">'Jeffrey S'</td></tr>
-    <tr><td class="num"> 26</td><td class="num"> 5.31</td><td class="left">'ais523'</td></tr>
-    <tr><td class="num"> 25</td><td class="num"> 4.88</td><td class="left">'Drotten'</td></tr>
-    <tr><td class="num"> 20</td><td class="num"> 6.05</td><td class="left">'Iceball'</td></tr>
-    <tr><td class="num"> 19</td><td class="num"> 3.74</td><td class="left">'Eselchen'</td></tr>
-    <tr><td class="num"> 18</td><td class="num"> 4.22</td><td class="left">'Mecki'</td></tr>
-    <tr><td class="num"> 16</td><td class="num"> 3.25</td><td class="left">'tasker'</td></tr>
-    <tr><td class="num"> 15</td><td class="num"> 5.40</td><td class="left">'oxyd4ever'</td></tr>
-    <tr><td class="num"> 13</td><td class="num"> 5.23</td><td class="left">'Samuel'</td></tr>
-    <tr><td class="num"> 13</td><td class="num"> 8.15</td><td class="left">'Ludmian'</td></tr>
-    <tr><td class="num"> 11</td><td class="num"> 6.36</td><td class="left">'ShadowPhrogg32642342'</td></tr>
-    <tr><td class="num"> 11</td><td class="num"> 7.73</td><td class="left">'evane'</td></tr>
-    <tr><td class="num"> 10</td><td class="num"> 7.80</td><td class="left">'hdwow'</td></tr>
-    <tr><td class="num">  8</td><td class="num"> 7.63</td><td class="left">'Antonio EE'</td></tr>
-    <tr><td class="num">  8</td><td class="num"> 3.25</td><td class="left">'Vlad'</td></tr>
-    <tr><td class="num">  7</td><td class="num"> 7.00</td><td class="left">'Zekobah'</td></tr>
-    <tr><td class="num">  7</td><td class="num"> 4.29</td><td class="left">'Snaily'</td></tr>
-    <tr><td class="num">  6</td><td class="num"> 5.17</td><td class="left">'Emmanuel'</td></tr>
-    <tr><td class="num">  5</td><td class="num"> 6.80</td><td class="left">'Breezy'</td></tr>
-    <tr><td class="num">  5</td><td class="num"> 9.20</td><td class="left">'HuB34'</td></tr>
-    <tr><td class="num">  4</td><td class="num"> 6.75</td><td class="left">'Agares'</td></tr>
-    <tr><td class="num">  4</td><td class="num"> 2.00</td><td class="left">'casmith_789'</td></tr>
-    <tr><td class="num">  4</td><td class="num"> 5.75</td><td class="left">'joseba'</td></tr>
-    <tr><td class="num">  4</td><td class="num"> 1.50</td><td class="left">'B.3'</td></tr>
-    <tr><td class="num">  4</td><td class="num"> 7.00</td><td class="left">'redsantz'</td></tr>
-    <tr><td class="num">  4</td><td class="num">10.00</td><td class="left">'Kevin'</td></tr>
-    <tr><td class="num">  4</td><td class="num"> 1.00</td><td class="left">'Hans-HD'</td></tr>
-    <tr><td class="num">  4</td><td class="num"> 6.50</td><td class="left">'serpent'</td></tr>
-    <tr><td class="num">  3</td><td class="num"> 0.67</td><td class="left">'Turbogurk'</td></tr>
-    <tr><td class="num">  3</td><td class="num"> 7.67</td><td class="left">'Joona'</td></tr>
-    <tr><td class="num">  3</td><td class="num"> 3.00</td><td class="left">'Rugby4ever'</td></tr>
-    <tr><td class="num">  3</td><td class="num"> 4.33</td><td class="left">'krazy62'</td></tr>
-    <tr><td class="num">  2</td><td class="num"> 8.00</td><td class="left">'cuoha'</td></tr>
-    <tr><td class="num">  2</td><td class="num"> 0.00</td><td class="left">'mhatta'</td></tr>
-    <tr><td class="num">  2</td><td class="num"> 6.50</td><td class="left">'tjRaven'</td></tr>
-    <tr><td class="num">  2</td><td class="num"> 2.50</td><td class="left">'Enrymather'</td></tr>
-    <tr><td class="num">  1</td><td class="num"> 9.00</td><td class="left">'purplerainbow'</td></tr>
-    <tr><td class="num">  1</td><td class="num"> 6.00</td><td class="left">'Slav'</td></tr>
-    <tr><td class="num">  1</td><td class="num"> 5.00</td><td class="left">'Uli'</td></tr>
-    <tr><td class="num">  1</td><td class="num">10.00</td><td class="left">'Cyphase'</td></tr>
-    <tr><td class="num">  1</td><td class="num"> 5.00</td><td class="left">'Harry Lim'</td></tr>
-    <tr><td class="num">  1</td><td class="num"> 2.00</td><td class="left">'Sequoyah'</td></tr>
-    <tr><td class="num">  1</td><td class="num"> 5.00</td><td class="left">'tony'</td></tr>
-    <tr><td class="num">  1</td><td class="num"> 5.00</td><td class="left">'Nanor22'</td></tr>
-    <tr><td class="num">  1</td><td class="num"> 4.00</td><td class="left">'jojo'</td></tr>
-    <tr><td class="num">  1</td><td class="num"> 6.00</td><td class="left">'Sopoforic'</td></tr>
-    <tr><td class="num">  1</td><td class="num"> 7.00</td><td class="left">'aranelv'</td></tr>
-    <tr><td class="num">  1</td><td class="num"> 5.00</td><td class="left">'jumbo'</td></tr>
-    <tr><td class="num">  1</td><td class="num"> 5.00</td><td class="left">'ael'</td></tr>
-    <tr><td class="num">  1</td><td class="num"> 0.00</td><td class="left">'Fred_the_wise'</td></tr>
+    <caption>$$Rating_Statistics$$ $$May$$ 2014</caption>
+    <colgroup><col width="180"><col width="80"><col width="120"><col width="80"></colgroup>
+    <tr><th>$$user$$</th><th>$$count$$</th><td>$$count_percent$$</td><th>$$average$$</th></tr>
+    <tr><td class="left">dev0</td><td class="num">1750/2400</td><td class="num">72.92 %</td><td class="num">4.28</td></tr>
+    <tr><td class="left">Taztunes</td><td class="num">1339/2400</td><td class="num">55.79 %</td><td class="num">4.76</td></tr>
+    <tr><td class="left">daydreamer</td><td class="num">1076/2400</td><td class="num">44.83 %</td><td class="num">4.71</td></tr>
+    <tr><td class="left">U-Punkt</td><td class="num">881/2400</td><td class="num">36.71 %</td><td class="num">5.11</td></tr>
+    <tr><td class="left">Another</td><td class="num">870/2400</td><td class="num">36.25 %</td><td class="num">5.16</td></tr>
+    <tr><td class="left">gorg</td><td class="num">764/2400</td><td class="num">31.83 %</td><td class="num">5.01</td></tr>
+    <tr><td class="left">maggie</td><td class="num">431/2400</td><td class="num">17.96 %</td><td class="num">4.69</td></tr>
+    <tr><td class="left">Raoul</td><td class="num">151/2400</td><td class="num">6.29 %</td><td class="num">5.39</td></tr>
+    <tr><td class="left">Craven</td><td class="num">132/2400</td><td class="num">5.50 %</td><td class="num">4.4</td></tr>
+    <tr><td class="left">Mark P.</td><td class="num">64/2400</td><td class="num">2.67 %</td><td class="num">4.92</td></tr>
+    <tr><td class="left">Zecks</td><td class="num">37/2400</td><td class="num">1.54 %</td><td class="num">4.35</td></tr>
   </table>
